--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <footer>
         <div class="validator-block">
-                <a href="https://validator.w3.org/?doc=https://5ganes.github.io/cs472assignment/index.html">
+                <a href="http://validator.w3.org/check?uri=https://5ganes.github.io" target="_blank">
                     <img src="https://manalabs.org/img/w3c-html.png" alt="HTML validator icon" />
                 </a>
         </div>
