homepage link added in header image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <header>
         <div class="title-image">
-            <img src="images/ganesh.jpg" alt="Prifie Picture" title="Prifie Picture">
+            <a href="https://5ganes.github.io">
+                <img src="images/ganesh.jpg" alt="Prifie Picture" title="Prifie Picture">
+            </a>
         </div>
         <div class="title-content">
             Ganesh Kahtri<br><strong>(gkhatri@miu.edu)</strong>
@@ -21,7 +23,7 @@
         <div class="sidebar">
             <h3 class="sidebar-title">My Assignments</h3>
             <ul>
-                <li><a href="">Lab01 - Home Page</a></li>
+                <li><a href="https://5ganes.github.io">Lab01 - Home Page</a></li>
                 <li><a href="">Lab02 - About Me</a></li>
                 <li><a href="">Lab03 - Recipe</a></li>
                 <li><a href="">Lab04 - Movie Review</a></li>
