--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- head section -->
 <head>
     <title>Ganesh Khatri - CV</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link to the external css file -->
     <link type="text/css" rel="stylesheet" href="css/main.css">
 </head>
+<!-- head section ends -->
+
 <body>
 
+    <!-- header section at the top -->
     <header>
         <div class="title-image">
             <a href="https://5ganes.github.io">
@@ -18,8 +24,12 @@
             Ganesh Kahtri<br><strong>(gkhatri@miu.edu)</strong>
         </div>
     </header>
+    <!-- header section at the top ends -->
 
+    <!-- main body section -->
     <section>
+        
+        <!-- sidebar start -->
         <div class="sidebar">
             <h3 class="sidebar-title">My Assignments</h3>
             <ul>
@@ -34,6 +44,9 @@
                 <li><a href="">Lab09 - </a></li>
             </ul>
         </div>
+        <!-- sidebar ends -->
+
+        <!-- main container start -->
         <div class="main-container">
             <div class="welcome">
                 <h3 class="welcome-title">Welcome to my Personal Blog !</h3>
@@ -43,19 +56,31 @@
                 </p>
             </div>
         </div>
-    </section>
+        <!-- main container ends -->
 
+    </section>
+    <!-- main body section ends -->
+
+    <!-- footer starts -->
     <footer>
+        
+        <!-- HTML validation code -->
         <div class="validator-block">
                 <a href="http://validator.w3.org/check?uri=https://5ganes.github.io" target="_blank">
                     <img src="https://manalabs.org/img/w3c-html.png" alt="HTML validator icon" />
                 </a>
         </div>
+        <!-- HTML validation code ends -->
+
+        <!-- copyright block -->
         <div class="copyright-block">
             Copyright @ 2021. All rights reserved.<br> 
             Powered By : <a href="">Ganesh Bahadur Khatri</a>
         </div>
+        <!-- copyright block ends -->
+
     </footer>
+    <!-- footer ends -->
 
 </body>
 </html>
