--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                 <a href="http://validator.w3.org/check?uri=https://5ganes.github.io" target="_blank">
                     <img src="https://manalabs.org/img/w3c-html.png" alt="HTML validator icon" />
                 </a>
+
+                <a href="http://www.css-validator.org/validator?uri=https://5ganes.github.io" target="_blank">
+                    <img src="https://manalabs.org/img/w3c-css.png" alt="HTML validator icon" />
+                </a>
         </div>
         <!-- HTML validation code ends -->
 
