--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </a>
         </div>
         <div class="title-content">
-            Ganesh Kahtri<br><strong>(gkhatri@miu.edu)</strong>
+            Ganesh Kahtri<br>(gkhatri@miu.edu)
         </div>
     </header>
     <!-- header section at the top ends -->
@@ -34,8 +34,8 @@
             <h3 class="sidebar-title">My Assignments</h3>
             <ul>
                 <li><a href="https://5ganes.github.io">Lab01 - Home Page</a></li>
-                <li><a href="">Lab02 - About Me</a></li>
-                <li><a href="">Lab03 - Recipe</a></li>
+                <li><a href="w1d2aboutme/index.html">Lab02 - About Me</a></li>
+                <li><a href="">Lab02 - Recipe</a></li>
                 <li><a href="">Lab04 - Movie Review</a></li>
                 <li><a href="">Lab05 - MP3 Library</a></li>
                 <li><a href="">Lab06 - </a></li>
@@ -64,14 +64,14 @@
     <!-- footer starts -->
     <footer>
         
-        <!-- HTML validation code -->
+        <!-- HTML/CSS validation code -->
         <div class="validator-block">
-                <a href="http://validator.w3.org/check?uri=https://5ganes.github.io" target="_blank">
+                <a href="http://validator.w3.org/nu/?doc=https://5ganes.github.io" target="_blank">
                     <img src="https://manalabs.org/img/w3c-html.png" alt="HTML validator icon" />
                 </a>
 
-                <a href="http://www.css-validator.org/validator?uri=https://5ganes.github.io" target="_blank">
-                    <img src="https://manalabs.org/img/w3c-css.png" alt="HTML validator icon" />
+                <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://5ganes.github.io" target="_blank">
+                    <img src="https://manalabs.org/img/w3c-css.png" alt="CSS validator icon" />
                 </a>
         </div>
         <!-- HTML validation code ends -->
