alt attribute added in img tags aboutme page

--- a/w1d2aboutme/index.html
+++ b/w1d2aboutme/index.html
@@ -44,10 +44,10 @@
             <h2 class="article-title">My Happy and Sad Moods</h2>
             <div>
                 <div>
-                    <img src="images/happy.jpg">
+                    <img src="images/happy.jpg" alt="Happy mood image" title="Happy mood image">
                 </div>
                 <div>
-                    <img src="images/sad.jpg">
+                    <img src="images/sad.jpg" alt="Sad mood image" title="Sad mood image">
                 </div>
             </div>
         </article>
