--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h3 class="sidebar-title">My Assignments</h3>
             <ul>
                 <li><a href="https://5ganes.github.io">Lab01 - Home Page</a></li>
-                <li><a href="w1d2aboutme/index.html">Lab02 - About Me</a></li>
+                <li><a href="w1d2aboutme">Lab02 - About Me</a></li>
                 <li><a href="">Lab02 - Recipe</a></li>
                 <li><a href="">Lab04 - Movie Review</a></li>
                 <li><a href="">Lab05 - MP3 Library</a></li>
