section doesn't have heading : html warning removed

--- a/w1d2aboutme/index.html
+++ b/w1d2aboutme/index.html
@@ -17,7 +17,7 @@
     <!-- header section at the top ends -->
 
     <!-- main body section -->
-    <section>
+    <div class="section">
         
         <article class="course-list">
             <h2 class="article-title">My Course List at MIU</h2>
@@ -60,7 +60,7 @@
             </div>
         </article>
 
-    </section>
+    </div>
     <!-- main body section ends -->
 
     <!-- footer starts -->
