--- a/w1d2aboutme/index.html
+++ b/w1d2aboutme/index.html
@@ -20,7 +20,9 @@
     <div class="section">
         
         <article class="course-list">
-            <h2 class="article-title">My Course List at MIU</h2>
+            <h2 class="article-title">
+                My Course List at MIU <a class="right" href="..">Home</a>
+            </h2>
             <ul>
                 <li><a href="">CS390 - Fundamental Programming Practices</a></li>
                 <li><a href="">CS401 - Modern Programming Practices</a></li>
