--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul>
                 <li><a href="https://5ganes.github.io">Lab01 - Home Page</a></li>
                 <li><a href="w1d2aboutme">Lab02 - About Me</a></li>
-                <li><a href="">Lab02 - Recipe</a></li>
+                <li><a href="w1d2recipe/pie.html">Lab02 - Recipe</a></li>
                 <li><a href="">Lab04 - Movie Review</a></li>
                 <li><a href="">Lab05 - MP3 Library</a></li>
                 <li><a href="">Lab06 - </a></li>
