alt added in img tag in recipe

--- a/w1d2recipe/pie.html
+++ b/w1d2recipe/pie.html
@@ -16,7 +16,7 @@
     
     <div class="pie-image-desc">
         <div class="pie-image">
-            <img src="images/pie.jpg"/>
+            <img src="images/pie.jpg" alt="Pie Image"/>
         </div>
         <div class="pie-desc">
             One 9-inch pie<br>
