--- a/w1d2recipe/pie.html
+++ b/w1d2recipe/pie.html
@@ -75,7 +75,7 @@
             <li><strong>Bake:</strong> Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
         </ol>
         <p>
-            This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of <s>cake</s> pie!
+            This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of <span>cake</span> pie!
         </p>
     </div>
     <hr>
