--- a/w1d3moviereview/tmnt.html
+++ b/w1d3moviereview/tmnt.html
@@ -259,10 +259,10 @@
     </div>
 
     <div class="validation">
-        <a href="http://validator.w3.org/nu/?doc=https://5ganes.github.io/w1d3moviereview/pie.html" target="_blank">
+        <a href="http://validator.w3.org/nu/?doc=https://5ganes.github.io/w1d3moviereview/tmnt.html" target="_blank">
             <img src="images/w3c-html.png" alt="HTML validator icon" />
         </a>
-        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://5ganes.github.io/w1d3moviereview/pie.html" target="_blank">
+        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://5ganes.github.io/w1d3moviereview/tmnt.html" target="_blank">
             <img src="images/w3c-css.png" alt="CSS validator icon" />
         </a>
     </div>
