--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 <li><a href="w1d2aboutme">Lab02 - About Me</a></li>
                 <li><a href="w1d2recipe/pie.html">Lab02 - Recipe</a></li>
                 <li><a href="w1d3moviereview/tmnt.html">Lab03 - Movie Review</a></li>
-                <li><a href="">Lab05 - MP3 Library</a></li>
-                <li><a href="">Lab06 - </a></li>
-                <li><a href="">Lab07 - </a></li>
-                <li><a href="">Lab08 - </a></li>
-                <li><a href="">Lab09 - </a></li>
+                <li><a href="w1d4responsive/flxgrd.html">Lab04 - Responsive Flex - Grid</a></li>
+                <li><a href="w1d4responsive/btstrp.html">Lab04 - Responsive Bootstrap</a></li>
+                <li><a href="">Labx - </a></li>
+                <li><a href="">Labx - </a></li>
+                <li><a href="">Labx - </a></li>
             </ul>
         </div>
         <!-- sidebar ends -->
