assignment 05 - javascript fundamentals

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li><a href="w1d3moviereview/tmnt.html">Lab03 - Movie Review</a></li>
                 <li><a href="w1d4responsive/flxgrd.html">Lab04 - Responsive Flex - Grid</a></li>
                 <li><a href="w1d4responsive/btstrp.html">Lab04 - Responsive Bootstrap</a></li>
-                <li><a href="">Labx - </a></li>
+                <li><a href="w1d5assignment">Lab05 - Javascript Fundamentals</a></li>
                 <li><a href="">Labx - </a></li>
                 <li><a href="">Labx - </a></li>
             </ul>
