w1d5assignment some animated text on front html page

--- a/w1d5assignment/index.html
+++ b/w1d5assignment/index.html
@@ -6,8 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week1 - Day - 5 Assignment</title>
     <script type="text/javascript" src="main.js"></script>
+
+    <style>
+        #info{
+            margin: auto; font-size: 3rem; margin-top: 30vh; font-weight: bold; text-align: center;
+            text-shadow: 5px 5px 5px grey; padding: 2%; 
+            transition: font-size 1s;
+        }
+        #info:hover{
+            font-size: 3.4rem;
+        } 
+    </style>
+
 </head>
 <body>
-    
+    <div id = "info">
+        Please go to developer console to view the output.
+    </div>
 </body>
 </html>
