--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li><a href="w1d4responsive/flxgrd.html">Lab04 - Responsive Flex - Grid</a></li>
                 <li><a href="w1d4responsive/btstrp.html">Lab04 - Responsive Bootstrap</a></li>
                 <li><a href="w1d5assignment">Lab05 - JavaScript Fundamentals</a></li>
-                <li><a href="">Labx - </a></li>
+                <li><a href="w1d6asciianimation/ascii.html">Lab06 - ASCII Animation</a></li>
                 <li><a href="">Labx - </a></li>
             </ul>
         </div>
