--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                 <li><a href="w1d4responsive/btstrp.html">Lab04 - Responsive Bootstrap</a></li>
                 <li><a href="w1d5assignment">Lab05 - JavaScript Fundamentals</a></li>
                 <li><a href="w1d6asciianimation/ascii.html">Lab06 - ASCII Animation</a></li>
-                <li><a href="">Labx - </a></li>
+                <li><a href="w2d1assignment/lambda.html">Lab7 - Mocha Testing</a></li>
+                <li><a href="w2d1assignment/regexp.html">Lab7 - Regular Expressions</a></li>
+                <li><a href="w2d1assignment/srm.html">Lab7 - SRM System</a></li>
             </ul>
         </div>
         <!-- sidebar ends -->
