--- a/w2d1assignment/srm.html
+++ b/w2d1assignment/srm.html
@@ -27,7 +27,7 @@
             </div>
             <div class="signout col-2 text-right">
                 Hello ! 
-                <a href="" class="btn btn-success ml-3">Sign Out</a>
+                <a href="" class="btn btn-light ml-3">Sign Out</a>
             </div>
         </div>
     
