--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <li><a href="w2d1assignment/lambda.html">Lab7 - Mocha Testing</a></li>
                 <li><a href="w2d1assignment/regexp.html">Lab7 - Regular Expressions</a></li>
                 <li><a href="w2d1assignment/srm.html">Lab7 - SRM System</a></li>
+                <li><a href="w2d4assignment/index.html">Lab10 - JS Inheritance</a></li>
             </ul>
         </div>
         <!-- sidebar ends -->
