--- a/practice/grid.html
+++ b/practice/grid.html
@@ -8,14 +8,33 @@
 </head>
 <style>
     .grid-box{
-        display: grid;
-        grid-template-columns: 80px 100px 30px;
-        grid-template-rows: 50px 30px;
+       display: grid;
+       /* grid-template-areas: 
+            'some text text' 
+            'some here there';
+        height: 40vh; */
+        height: 40vh;
+
+    }
+    some{
+        background-color: red; grid-row: 1 / span 2; grid-column: 1;
+    }
+    text{
+        background-color: blue; grid-column: 2 / span 2; grid-row: 1;
+    }
+    here{
+         background-color: yellow;
+    }
+    there{
+         background-color: green;
     }
 </style>
 <body>
     <div class="grid-box">
-        sdfsdf
+        <some>some</some>
+        <text>text</text>
+        <here>here</here>
+        <there>there</there>
     </div>
 </body>
 </html>
