--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <li><a href="w2d1assignment/regexp.html">Lab7 - Regular Expressions</a></li>
                 <li><a href="w2d1assignment/srm.html">Lab7 - SRM System</a></li>
                 <li><a href="w2d4assignment/index.html">Lab10 - JS Inheritance</a></li>
+                <li><a href="w3d1assignment/index.html">Lab11 - JS Classes - Inheritance</a></li>
             </ul>
         </div>
         <!-- sidebar ends -->
