--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <li><a href="w2d4assignment/index.html">Lab10 - JS Inheritance</a></li>
                 <li><a href="w3d1assignment/index.html">Lab11 - JS Classes - Inheritance</a></li>
                 <li><a href="w3d2assignment/index.html">Lab12 - JQuery Basics</a></li>
+                <li><a href="w3d3assignment/index.html">Lab13 - JQuery Event Handling</a></li>
             </ul>
         </div>
         <!-- sidebar ends -->
