jslint link in w3d3assignment

--- a/w3d3assignment/index.html
+++ b/w3d3assignment/index.html
@@ -37,5 +37,14 @@
 		<p>
 			Good luck!
 		</p>
+
+
+
+		<div class="jslint">
+			<a href="http://mumstudents.org/jshint/check.php?uri=https://5ganes.github.io/w3d3assignment/index.html">
+				<img src="jslint.jpg" alt="JavaScript Lint">
+			</a>
+		</div>
+
 	</body>
 </html>
